@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-12T16:21:13Z",
+  "timestamp" : "2022-07-13T08:19:45Z",
   "count_outdated" : 385,
   "uniques_outdated" : 222,
   "count" : 417,
-  "uniques" : 240,
+  "uniques" : 241,
   "clones" : [
     {
       "timestamp": "2022-06-29T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -100,6 +100,13 @@
       "timestamp": "2022-07-12T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
